imported changes from upstream